ui is corrected

--- a/src/app/components/page_components/order_submit_wizard_components/wizard_components/checkout-order-component/checkout-order-component.html
+++ b/src/app/components/page_components/order_submit_wizard_components/wizard_components/checkout-order-component/checkout-order-component.html
@@ -42,7 +42,7 @@
             <!-- PAY LATER -->
             <mat-card class="payment-option" [class.active]="paymentType === 'LATER'" [class.disabled]="isCustomer()">
                 <mat-radio-button value="LATER" [disabled]="isCustomer()">
-                    <div class="option-content">pay la
+                    <div class="option-content">
                         <mat-icon color="accent">schedule</mat-icon>
                         <div>
                             <h3>Pay Later</h3>
