unpaid invoice handling is added

--- a/src/app/common_styles/elements/system_message_styles.scss
+++ b/src/app/common_styles/elements/system_message_styles.scss
@@ -9,6 +9,11 @@
   color: #ffffff !important;
 }
 
+.snackbar-warning .mdc-snackbar__surface {
+  background: #ed6c02 !important;
+  color: #fff !important;
+}
+
 .snackbar-info .mdc-snackbar__surface {
   background-color: #0277bd !important;
   color: #ffffff !important;
