--- a/src/app/components/reusable_components/bnpl-plan-installment-calculator-dialog-box-component/bnpl-plan-installment-calculator-dialog-box-component.html
+++ b/src/app/components/reusable_components/bnpl-plan-installment-calculator-dialog-box-component/bnpl-plan-installment-calculator-dialog-box-component.html
@@ -1,1 +1,55 @@
-<p>bnpl-plan-installment-calculator-dialog-box-component works!</p>
+<h2 mat-dialog-title>BNPL Installment Calculator</h2>
+
+<mat-dialog-content>
+
+  <form [formGroup]="form" class="form-grid">
+
+    <mat-form-field appearance="outline">
+      <mat-label>Plan Type</mat-label>
+      <mat-select formControlName="bnpl_PlanTypeID">
+        <mat-option [value]="1">Standard</mat-option>
+        <mat-option [value]="2">Premium</mat-option>
+      </mat-select>
+
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Installments</mat-label>
+      <input matInput type="number" formControlName="installmentCount">
+
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Initial Payment</mat-label>
+      <input matInput type="number" formControlName="initialPayment">
+
+    </mat-form-field>
+
+  </form>
+
+  <mat-divider></mat-divider>
+
+  <!-- RESULT -->
+  <div *ngIf="calculationResult()" class="result-box">
+    <h3>Installment Summary</h3>
+    <p>
+      {{ calculationResult().installmentCount }} ×
+      Rs. {{ calculationResult().installmentAmount | number:'1.2-2' }}
+    </p>
+    <p>
+      Initial Payment:
+      Rs. {{ calculationResult().initialPayment | number:'1.2-2' }}
+    </p>
+  </div>
+
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button mat-button (click)="cancel()">Cancel</button>
+  <button mat-stroked-button color="primary" (click)="calculate()" [disabled]="loading()">
+    Calculate
+  </button>
+  <button mat-raised-button color="accent" (click)="confirm()" [disabled]="!calculationResult()">
+    Use This Plan
+  </button>
+</mat-dialog-actions>
