response model is updated

--- a/src/app/components/reusable_components/bnpl-plan-installment-calculator-dialog-box-component/bnpl-plan-installment-calculator-dialog-box-component.html
+++ b/src/app/components/reusable_components/bnpl-plan-installment-calculator-dialog-box-component/bnpl-plan-installment-calculator-dialog-box-component.html
@@ -74,15 +74,14 @@
 
         </div>
 
-        <!--div class="plan-info">
+        <div class="plan-info">
             <mat-icon>info</mat-icon>
             <span>
                 Plan:
-                {{ calculationResult()?.bnpL_PlanTypeResponseDto.bnpl_PlanTypeName }}
-                ({{ calculationResult()?.bnpL_PlanTypeResponseDto.interestRate }}% interest)
+                {{ calculationResult()?.bnplPlanTypeResponseDto!.bnpl_PlanTypeName }}
+                ({{ calculationResult()?.bnplPlanTypeResponseDto!.interestRate }}% interest)
             </span>
-        </div-->
-
+        </div>
     </div>
 
 </mat-dialog-content>
