--- a/src/app/components/page_components/order_submit_wizard_components/wizard_components/customer-shipping-detail-verification-component/customer-shipping-detail-verification-component.scss
+++ b/src/app/components/page_components/order_submit_wizard_components/wizard_components/customer-shipping-detail-verification-component/customer-shipping-detail-verification-component.scss
@@ -65,3 +65,20 @@
   font-size: 14px;
   color: #999;
 }
+
+/* ACTION BAR */
+.actions {
+  grid-column: span 2;
+  display: flex;
+  justify-content: flex-end;
+  gap: 12px;
+  padding-top: 16px;
+  border-top: 1px solid #eee;
+
+  button {
+    min-width: 180px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  }
+}
